--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "url": "https://github.com/eslint-plugins/eslint-plugin-lean-imports/issues"
   },
   "homepage": "https://github.com/eslint-plugins/eslint-plugin-lean-imports#readme",
+  "peerDependencies": {
+     "eslint": "^1.0.0"
+  },
   "devDependencies": {
     "babel": "^5.8.5",
     "babel-eslint": "^3.1.26",
-    "eslint": "^0.24.1",
-    "eslint-tester": "^0.8.2",
+    "eslint": "^1.0.0",
     "is-my-json-valid": "^2.12.0",
     "mocha": "^2.2.5",
     "mt-changelog": "^0.6.1",
