--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test": "npm run lint && npm run build && mocha",
     "build": "rm -rf lib && babel src --out-dir lib",
     "lint": "eslint ./",
-    "patch": "release patch",
-    "minor": "release minor",
-    "major": "release major"
+    "patch": "release --run patch",
+    "minor": "release --run minor",
+    "major": "release --run major"
   },
   "repository": {
     "type": "git",
@@ -32,13 +32,13 @@
     "eslint": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.5",
-    "babel-eslint": "^3.1.26",
-    "eslint": "^1.0.0",
-    "is-my-json-valid": "^2.12.0",
-    "mocha": "^2.2.5",
-    "mt-changelog": "^0.6.1",
-    "release-script": "^0.2.1"
+    "babel": "^5.8.23",
+    "babel-eslint": "^4.1.3",
+    "eslint": "^1.7.2",
+    "is-my-json-valid": "^2.12.2",
+    "mocha": "^2.3.3",
+    "mt-changelog": "^0.6.2",
+    "release-script": "^0.5.4"
   },
   "keywords": [
     "eslint-plugin",
