--- a/package.json
+++ b/package.json
@@ -29,16 +29,18 @@
   },
   "homepage": "https://github.com/eslint-plugins/eslint-plugin-lean-imports#readme",
   "peerDependencies": {
-    "eslint": "^1.0.0"
+    "eslint": "^2.2.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "eslint": "^1.7.2",
-    "is-my-json-valid": "^2.12.2",
-    "mocha": "^2.3.3",
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "eslint": "^2.2.0",
+    "is-my-json-valid": "^2.13.1",
+    "mocha": "^2.4.5",
     "mt-changelog": "^0.6.2",
-    "release-script": "^0.5.4"
+    "release-script": "^1.0.2"
   },
   "keywords": [
     "eslint-plugin",
