--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.5.0",
