--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,10 @@
     "node": true
   },
   "parser": "babel-eslint",
+  parserOptions: {
+    ecmaVersion: 6,
+    sourceType: "module"
+  },
   "rules": {
     "comma-spacing": 2,
     "comma-style": [2, "last"],
