--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/eslint-plugins/eslint-plugin-lean-imports#readme",
   "peerDependencies": {
-    "eslint": "^2.2.0"
+    "eslint": "~2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
@@ -38,7 +38,7 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "eslint": "^2.2.0",
+    "eslint": "~2.2.0",
     "is-my-json-valid": "^2.13.1",
     "mocha": "^2.4.5",
     "mt-changelog": "^0.6.2",
